# qt-todo

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp  main.qml
include/: caldavclient.h  calendarutil.h  databasemanager.h  daymodel.h  weekmodel.h
qml/: CalendarMonthView.qml  CalendarWeekView.qml  IconButton.qml  Icons.qml  MainView.qml  SideBar.qml  TodoList.qml  TodoView.qml  WeekViewDay.qml
qml/MonthView/: CalendarMonthView.qml  MonthViewEvents.qml  MonthViewWeekRow.qml
qml/WeekView/: CalendarWeekView.qml  WeekViewDay.qml
src/: caldavclient.cpp  caldavclient.h  calendarutil.cpp  databasemanager.cpp  daymodel.cpp  main.cpp  weekmodel.cpp
